textarea too wide when submitting an idea, fixed. also changed the offset to scroll to when selecting a field

--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -50,3 +50,7 @@ strong.action-statement {
   margin-right: 20px;
   margin-top: 20px;
 }
+
+#idea-edit #description {
+  width: 93%;
+}
